# Bosworth-V1.0

./: .replit  BosworthV1.py  parameters.json  prompt_chat.txt  pyproject.toml
