[tool.poetry]
name = "repl_nix_PythonGPT3Tutorial"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
openai = "^0.25.0"
PyQt5 = "^5.15.7"
wikipedia = "^1.4.0"
Wikidata = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
